# config_code_generator

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: nightly.yml
config/: protocol.example.yaml
packaging/: build_exe.py  config-code-generator-updater.spec  config-code-generator.spec  gui_entry.py  updater_entry.py
src/config_codegen/: __init__.py  cli.py  csv_io.py  document.py  errors.py  generator.py  models.py  preview.py  version.py
src/config_codegen/gui/: __init__.py  app.py  controller.py  entry_capabilities.py  i18n.py  main_window.py  theme.py
src/config_codegen/gui/models/: __init__.py  entry_table_model.py
src/config_codegen/gui/widgets/: about_page.py  basic_config_editor.py  entry_editor.py  hook_registry_editor.py  new_entry_dialog.py
src/config_codegen/templates/: hook_implementations.c.j2  switch_fragment.c.j2
src/config_codegen/update/: __init__.py  installer.py  integrity.py  models.py  service.py
tests/: test_csv_io.py  test_document.py  test_entry_capabilities.py  test_generator.py  test_gui.py  test_i18n.py  test_update.py  test_updater.py  test_version.py
